--- a/EssentialFeediOS/Feed UI/Views/Feed.storyboard
+++ b/EssentialFeediOS/Feed UI/Views/Feed.storyboard
@@ -122,6 +122,7 @@
                         <connections>
                             <outlet property="dataSource" destination="XOT-Mo-Sic" id="vEM-c8-tCD"/>
                             <outlet property="delegate" destination="XOT-Mo-Sic" id="9ov-yv-UC6"/>
+                            <outlet property="prefetchDataSource" destination="XOT-Mo-Sic" id="kzj-Nj-Egz"/>
                         </connections>
                     </tableView>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="POG-2y-vF2">
