Configure `ErrorView` programmatically so we don't duplicate layout logic in storyboards

--- a/EssentialFeed/EssentialFeediOS/Image Comments UI/Views/ImageComments.storyboard
+++ b/EssentialFeed/EssentialFeediOS/Image Comments UI/Views/ImageComments.storyboard
@@ -16,40 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="VAo-yy-GVM" customClass="ErrorView" customModule="EssentialFeediOS" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zV-to-QwL">
-                                    <rect key="frame" x="8" y="8" width="398" height="18"/>
-                                    <gestureRecognizers/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <nil key="highlightedColor"/>
-                                    <connections>
-                                        <outletCollection property="gestureRecognizers" destination="wLy-Zh-Cwr" appends="YES" id="IV0-to-jFX"/>
-                                    </connections>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" red="0.99951404330000004" green="0.41759261489999999" blue="0.4154433012" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstItem="3zV-to-QwL" firstAttribute="top" secondItem="VAo-yy-GVM" secondAttribute="top" constant="8" id="U8S-lv-KPH"/>
-                                <constraint firstItem="3zV-to-QwL" firstAttribute="leading" secondItem="VAo-yy-GVM" secondAttribute="leading" constant="8" id="hza-n8-TPe"/>
-                                <constraint firstAttribute="trailing" secondItem="3zV-to-QwL" secondAttribute="trailing" constant="8" id="iel-f5-RXr"/>
-                                <constraint firstAttribute="bottom" secondItem="3zV-to-QwL" secondAttribute="bottom" constant="8" id="jeW-s5-nZ0"/>
-                            </constraints>
-                            <connections>
-                                <outlet property="label" destination="3zV-to-QwL" id="shn-0D-7Bq"/>
-                            </connections>
-                        </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="75X-az-ro0">
-                            <rect key="frame" x="0.0" y="231" width="414" height="16"/>
+                            <rect key="frame" x="0.0" y="197" width="414" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ImageCommentCell" rowHeight="130" id="imj-Jn-NFv" customClass="ImageCommentCell" customModule="EssentialFeediOS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="78.5" width="414" height="130"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="130"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="imj-Jn-NFv" id="75W-CU-G3d">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
@@ -116,16 +90,9 @@
                             <action selector="refresh" destination="XOT-Mo-Sic" eventType="valueChanged" id="fkQ-5f-dzJ"/>
                         </connections>
                     </refreshControl>
-                    <connections>
-                        <outlet property="errorView" destination="VAo-yy-GVM" id="dKJ-fe-cGK"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l8G-Yd-ZUH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="wLy-Zh-Cwr">
-                    <connections>
-                        <action selector="hideMessageAnimated" destination="VAo-yy-GVM" id="bVm-uY-XSr"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer id="wLy-Zh-Cwr"/>
             </objects>
             <point key="canvasLocation" x="1208.6956521739132" y="94.419642857142847"/>
         </scene>
